0.17.4
	bugfix: remove PHP warnings on IPv4 space management tab (ticket:277)
	bugfix: work around array_fill_keys() from PHP 5.2 (ticket:278)
0.17.3	2009-08-08
	update: even better search function (ticket:20)
	update: suggest tag selector for new files and users (ticket:205)
	update: "multiple ports" form is now hidden by default (ticket:274)
	new feature: tags quick list on "Tags" tab (ticket:259)
	bugfix: removed PHP warnings on "Rackspace" tab
	bugfix: rack row removal sometimes failed (by Marcin Suchocki)
	bugfix: improve usage counters for IPv4 networks
	bugfix: make ADDNEW_AT_TOP options really work everywhere (ticket:213)
	bugfix: authorize file preview as a download (ticket:241)
	bugfix: dictionary stats report didn't work correctly
0.17.2 2009-07-22
	new feature: configure default SNMP community (by jthurman)
	new feature: "$untagged", "$portless", "$nameless" and "$masklen_OP_NN" autotags
	new feature: knight button in IPv4 tree
	new feature: searching by attribute value or port reservation comment
	update: show appropriate message, if a record cannot be found
	update: add Cisco dictionary entry for WS-CBS3030-DEL. closes ticket 225 (by jthurman)
	update: add OS, router, fibre switch dictionary entries for ticket 238 (by Aaron)
	update: allow variations of FC WWN as an L2 address (by killsystem)
	update: port L2 address can be reused on the same object
	update: same port name can be repeated for an object with different types
	update: added comment field for IPv4 networks
	update: NetApp records (by Sander Klein)
	update: APC records (by Ray Robertson)
	bugfix: do not produce PHP warning on LivePTR tab
	bugfix: wrong port type set for WS-C2950-24. closes ticket 229 (by jthurman)
	bugfix: improved IOS detection and fixed a logic error. closes ticket 232 (by jthurman)
	bugfix: user account autotags were not generated under certain conditions (reported by Jason Hamilton)
	bugfix: correctly remove tags, when deleting files